apply plugin: 'java'
apply plugin: 'application'

// see https://github.com/kelemen/netbeans-gradle-project/issues/179
apply plugin: 'idea'
idea.module.downloadJavadoc = true

sourceCompatibility = '1.8'
[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'

// NetBeans will automatically add "run" and "debug" tasks relying on the
// "mainClass" property. You may however define the property prior executing
// tasks by passing a "-PmainClass=<QUALIFIED_CLASS_NAME>" argument.
//
// Note however, that you may define your own "run" and "debug" task if you
// prefer. In this case NetBeans will not add these tasks but you may rely on
// your own implementation.
if (!hasProperty('mainClass')) {
    ext.mainClass = 'tf.gpx.edit.main.GPXEditorManager'
}

repositories {
    mavenCentral()
    mavenLocal()
    jcenter()
    // You may define additional repositories, or even remove "mavenCentral()".
    // Read more about repositories here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:repositories
    maven {
        url "http://maven.jzy3d.org/releases"
    }
}

dependencies {
    // The production code uses the SLF4J logging API at compile time
    compile 'org.slf4j:slf4j-api:1.7.12'
    compile 'commons-cli:commons-cli:1.3.1'
    compile 'commons-io:commons-io:2.4'
    compile 'org.apache.commons:commons-lang3:3.5'
    compile 'org.apache.commons:commons-collections4:4.0'
    compile 'gpx-parser:gpx-parser:1.2'
    compile 'org.jzy3d:jzy3d-api:1.0.0'
    compile 'org.jzy3d:jzy3d-javafx:1.0.0'
    compile 'org.controlsfx:controlsfx:8.40.14'
    compile 'de.jensd:fontawesomefx:8.9'
    compile 'de.saring:leafletmap:1.0.2-SNAPSHOT'
    
    // You can read more about how to add dependency here:
    //   http://www.gradle.org/docs/current/userguide/dependency_management.html#sec:how_to_declare_your_dependencies
    testCompile group: 'junit', name: 'junit', version: '4.12'
}
